<resources>
    <string name="app_name">RaceMeetings</string>
    <!-- Activity App Bar Titles. -->
    <string name="appbar_title_meetings">Meetings</string>
    <string name="appbar_title_meeting_summary">Meeting Summary</string>
    <string name="appbar_title_race_summary">Race Summary</string>
    <string name="appbar_title_meeting_races">Meeting Races</string>
    <string name="appbar_title_race_details">Meeting - Horse/Jockey/Trainer</string>
    <!-- Fragment tags. -->
    <string name="main_fragment_tag">main_fragment_tag</string>
    <string name="meetings_details_fragment_tag">meetings_details_fragment_tag</string>
    <string name="meeting_summary_fragment_tag">meeting_detail_fragment_tag</string>
    <string name="race_detail_fragment_tag">race_detail_fragment_tag</string>
    <string name="meeting_races_fragment_tag">meeting_races_fragment_tag</string>
    <string name="meeting_races_details_fragment_tag">meeting_races_details_fragment_tag</string>
    <string name="date_search_fragment_tag">date_search_fragment_tag</string>
    <string name="race_details_fragment_tag">race_details_fragment_tag</string>
    <!-- Fragment text. -->
    <string name="nothing_to_show">Nothing to show yet</string>
    <string name="no_meetings_to_show">No meetings to show</string>
    <!-- Other fragment. -->
    <string name="bundle_meetings_fragment_date_key">bundle_meetings_fragment_date_key</string>
    <!-- Date. -->
    <string name="date_format_yyyyMMdd">yyyy-MM-dd</string>
    <!-- -->
    <string name="base_path_calendar">http://www.racingqueensland.com.au/opendatawebservices/calendar.asmx</string>
    <string name="base_path_meetings">http://www.racingqueensland.com.au/opendatawebservices/meetings.asmx</string>
    <string name="get_available_clubs">GetAvailableClubs</string>
    <string name="get_meetings_for_date">GetMeetingsForDate</string>
    <string name="meeting_date">meetingDate</string>
    <string name="get_races_for_meeting">GetRacesForMeeting</string>
    <string name="meeting_id">meetingId</string>
    <string name="get_horses_for_race">GetHorsesForRace</string>
    <string name="race_id">raceId</string>
    <!-- Progress dialog -->
    <string name="init_clubs_data">Initialising Clubs data.</string>
    <string name="init_tracks_data">Initialising Tracks data.</string>
    <string name="get_meetings_details">Retrieving Meeting details.</string>
    <string name="get_races_details">Retrieving Race details.</string>
    <string name="get_horses_details">Retrieving Horse and Jockey details.</string>
    <!-- Generic keys. -->
    <string name="network_exists_key"></string>
    <string name="show_todays_meetings_key"></string>
    <string name="no_network">No network connection exists.</string>
    <string name="check_device">Check your device settings.</string>
    <string name="meetings_rowid_key">meetings_rowid_key</string>
    <string name="races_rowid_key">races_rowid_key</string>
    <string name="CR_LF">\r\n</string>
    <string name="meeting_id_key">meeting_id_key</string>
    <string name="race_id_key">race_details_id_key</string>
    <string name="arguments_preference">arguments_preference</string>
    <!-- Preference keys. -->
    <!-- Tracks preference. -->
    <string name="pref_tracks_filter_key">pref_tracks_filter_key</string>
    <string name="pref_tracks_filter_title">Filter Meeting Tracks</string>
    <string name="pref_tracks_filter_summary">Only show meeting tracks selected in the Track Preferences.</string>
    <!-- Meetings General preference. -->
    <string name="pref_meetings_show_today_key">pref_meetings_show_today_key</string>
    <string name="pref_meetings_show_today_title">Show Meetings For Today</string>
    <string name="pref_meetings_show_today_summary">Show today\'s meetings on application start.</string>
    <string name="pref_meetings_exclude_BT_key">pref_meetings_exclude_BT_key</string>
    <string name="pref_meetings_exclude_BT_title">Exclude Barrier Trial</string>
    <string name="pref_meetings_exclude_BT_summary">Don\'t show Barrier Trial meetings.</string>
    <string name="pref_meetings_cache_key">pref_meetings_cache_key</string>
    <string name="pref_meetings_cache_title">Cache Meetings</string>
    <string name="pref_meetings_cache_summary">Save Meetings previously downloaded.</string>
    <!-- Navigation drawer. -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Button texts. -->
    <string name="button_cancel_text">Cancel</string>
    <string name="button_ok_text">OK</string>
</resources>
